# comp6771-24t2

./: .gitignore
exercises-w1/: CMakeLists.txt
exercises-w1/src/1.1/: setdiff.cpp  setdiff.test.cpp
exercises-w1/src/1.2/: fib_vector.cpp  fib_vector.test.cpp
exercises-w1/src/1.3/: cat.cpp  cat_file.cpp
exercises-w1/src/1.4/: sort3.cpp  sort3.test.cpp
exercises-w1/src/random/: namespace.cpp  random.cpp
exercises-w2/: CMakeLists.txt  iterators
exercises-w2/src/2.4/: scale.cpp  scale.h  scale.test.cpp
exercises-w2/src/2.5/: mismatch.cpp  mismatch.test.cpp
exercises-w2/src/2.6/: permutation.cpp  permutation.h  permutation.test.cpp
exercises-w2/src/2.7/: assortment.cpp
exercises-w2/src/2.8/: mixer.h  mixer.test.cpp
exercises-w2/src/mc/: q1.cpp  q2.cpp  q3.cpp
exercises-w2/src/mc/q4/: lib1.cpp  lib2.cpp  main.cpp
exercises-w2/src/random/: containers.txt  iterators.cpp  map_access.cpp
